--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "theme-sunset",
   "displayName": "Sunset Theme",
   "description": "A warm theme for everything you need.",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "publisher": "brunordgs",
   "repository": {
     "type": "git",
@@ -14,6 +14,7 @@
   "categories": [
     "Themes"
   ],
+  "icon": "icon.png",
   "contributes": {
     "themes": [
       {
